[gd_scene load_steps=4 format=3 uid="uid://bt8fsr4pncx6b"]

[ext_resource type="Script" uid="uid://bdgrns6cxfdm2" path="res://truck/interior/upgrades/build_ghost/build_ghost.gd" id="1_28fgk"]
[ext_resource type="Texture2D" uid="uid://bw8s4ksep3846" path="res://truck/interior/upgrades/build_ghost/invalid_placement_icon.tres" id="2_lx7sg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2fj7"]
size = Vector2(15, 15)

[node name="BuildGhost" type="Area2D" node_paths=PackedStringArray("sprite", "collider", "build_notifier")]
script = ExtResource("1_28fgk")
sprite = NodePath("Upgrade")
collider = NodePath("CollisionShape2D")
build_notifier = NodePath("Notifier")

[node name="Upgrade" type="Sprite2D" parent="."]

[node name="Notifier" type="Sprite2D" parent="."]
position = Vector2(0, -16)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_lx7sg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_k2fj7")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
